Closed
Bug 97656
Opened 24 years ago
Closed 24 years ago
Call to NPP_SetWindow in plugins has incorrect window frame
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: jkinder, Assigned: peterlubczynski-bugs)
References
()
Details
Attachments
(1 file)
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:0.9.3+)
Gecko/20010830
BuildID: 2001083005
PDFViewer overwrites the fizilla Navigation and personal toolbars, because the
window frame passed to NPP_SetWindow has it's topleft coordinates at {0,0}
instead of being offset to the correct port origin. This does not happen in the
classic version of mozilla.
Reproducible: Always
Steps to Reproduce:
1. install PDFViewer in Mozilla plug-ins folder (Contact me for experimental
carbonized PDFViewer plugin for
Acrobat.)
2. open any pdf file
Actual Results: Acrobat PDFViewer draws its window over the Navigation and
personal toolbars.
Expected Results: PDFViewer to draw its window in correct location.
| Assignee | ||
Comment 1•24 years ago
|
||
My bug. Patch on it's way. After we create the widget, we need to "fix up" the
window before the first SetWindow call. Pretty harmless patch as we do this
every time the timer fires anyway.
Andrei, can you review?
Assignee: av → peterlubczynski
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: patch
Priority: -- → P1
Target Milestone: --- → mozilla0.9.4
| Assignee | ||
Comment 2•24 years ago
|
||
Comment 4•24 years ago
|
||
sr=attinasi
| Assignee | ||
Comment 5•24 years ago
|
||
Just got approval over e-mail from Asa. Thanks Asa! Patch checked in, marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•