Patch to fix incorrect coordinates to first call of SetWindow(), bug 97656 r=av sr=attinasi a=asa